# chatterino2

./: .cirrus.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .codecov.yml  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .prettierrc.toml  .travis.yml  BUILDING_ON_FREEBSD.md  BUILDING_ON_LINUX.md  BUILDING_ON_MAC.md  BUILDING_ON_WINDOWS.md  BUILDING_ON_WINDOWS_WITH_VCPKG.md  BUILDING_WITH_CMAKE.md  CHANGELOG.c7.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  ENTERPRISE_DEPLOYMENT.MD  ISSUE_TEMPLATE.md  Jenkinsfile  LICENSE  QtCreatorPackageManager.cmake  README.md  REUSE.toml  _.travis.yml  account.cpp  account.h  accountmanager.cpp  accountmanager.h  appdatapath.cpp  appsettings.cpp  (+122 more)
auxiliary/crash-handler/: CMakeLists.txt  commandline.cpp  commandline.hpp  commandline_test.cpp  main.cpp  recovery.cpp  recovery.hpp  recovery_test.cpp  win_support.cpp
benchmarks/: .clang-format  CMakeLists.txt
benchmarks/resources/: bench.qrc  recentmessages-nymn.json  seventvemotes-nymn.json
benchmarks/src/: Emojis.cpp  Filters.cpp  FormatTime.cpp  Helpers.cpp  Highlights.cpp  LimitedQueue.cpp  LinkParser.cpp  MessageBuilding.cpp  MessageBuilding.hpp  ModerationPage.cpp  RecentMessages.cpp  main.cpp
lib/: CMakeLists.txt  Libcommuni.cmake  README.md  Settings.cmake  WinToast.cmake  appbase.pri  boost.pri  conanfile.txt  fmt.pri  libcommuni.pri  lrucache.pri  magic_enum.pri  qtkeychain.pri  rapidjson.pri  serialize.pri  settings.pri  signals.pri  snorenotify.pri  warnings.pri  websocketpp.pri  winsdk.pri
lib/appbase/: BaseSettings.cpp  BaseSettings.hpp  BaseTheme.cpp  BaseTheme.hpp  main.cpp  main.pro
lib/lua/: CMakeLists.txt
lib/qt-plugins/: CMakeLists.txt  QtPlugins.cpp
lib/semver/: README.md
lib/twitch-eventsub-ws/: .clang-format  .clang-tidy  .gitignore  .isort.cfg  .prettierignore  CMakeLists.txt  README.md  TODO.md  chat-messages.txt  pyproject.toml
mocks/: CMakeLists.txt
src/: .clang-format  .gitattributes  Application.cpp  Application.hpp  BaseSettings.cpp  BaseSettings.hpp  BaseTheme.cpp  BaseTheme.hpp  BrowserExtension.cpp  BrowserExtension.hpp  CMakeLists.txt  Channel.cpp  Channel.hpp  ChannelData.cpp  ChannelData.hpp  Common.cpp  Common.hpp  Const.hpp  ForwardDecl.hpp  PrecompiledHeader.hpp  Provider.cpp  Provider.hpp  Room.cpp  Room.hpp  RunGui.cpp  RunGui.hpp  TestDelegate.cpp  TestDelegate.hpp  TestModel.cpp  TestModel.hpp  TestView.cpp  TestView.hpp  TestView2.cpp  TestView2.hpp  TestWidget.cpp  TestWidget.hpp  Version.hpp  _Application.cpp  _ChannelData.hpp  _Common.h.cpp  (+68 more)
src/ab/: .clang-format  BaseWidget.cpp  BaseWidget.hpp  BaseWindow.cpp  BaseWindow.hpp  Column.cpp  Column.hpp  FlatButton.cpp  FlatButton.hpp  Notebook.Misc.cpp  Notebook.Misc.hpp  Notebook.cpp  Notebook.hpp  Row.cpp  Row.hpp  Space.cpp  Space.hpp  TitleBarButton.cpp  TitleBarButton.hpp
src/autogenerated/: ResourcesAutogen.cpp  ResourcesAutogen.hpp
src/common/: APIRequest.hpp  Aliases.hpp  Args.cpp  Args.hpp  Atomic.hpp  Channel.cpp  Channel.hpp  ChannelChatters.cpp  ChannelChatters.hpp  ChatterSet.cpp  ChatterSet.hpp  ChatterinoSetting.cpp  ChatterinoSetting.hpp  Common.hpp  CompletionModel.cpp  CompletionModel.hpp  ConcurrentMap.hpp  Credentials.cpp  Credentials.hpp  CustomSearchEngine.hpp  DownloadManager.cpp  DownloadManager.hpp  Emotemap.cpp  Emotemap.hpp  Env.cpp  Env.hpp  FlagsEnum.hpp  GlobalBadges.cpp  GlobalBadges.hpp  IrcColors.hpp  LastMessageLineStyle.hpp  LinkParser.cpp  LinkParser.hpp  Literals.hpp  LockedObject.hpp  Modes.cpp  Modes.hpp  MutexValue.hpp  NetworkCommon.cpp  NetworkCommon.hpp  (+39 more)
src/debug/: AssertInGuiThread.hpp  Benchmark.cpp  Benchmark.hpp  Log.hpp  log.hpp
src/dialogs/: SelectChannelDialog.cpp  SelectChannelDialog.hpp
src/irc/: IrcConnection2.cpp  IrcConnection2.hpp  IrcHelpers.hpp
src/logging/: loggingchannel.cpp  loggingchannel.h  loggingchannel.hpp  loggingmanager.cpp  loggingmanager.h  loggingmanager.hpp
src/messages/: Common.hpp  Emote.cpp  Emote.hpp  EmoteCache.hpp  EmoteMap.cpp  EmoteMap.hpp  Fonts.cpp  Fonts.hpp  HighlightPhrase.hpp  HistoricMessageAppearance.hpp  Image.cpp  Image.hpp  ImagePriorityOrder.cpp  ImagePriorityOrder.hpp  ImageSet.cpp  ImageSet.hpp  LimitedQueue.hpp  LimitedQueueSnapshot.hpp  Link.cpp  Link.hpp  Message.cpp  Message.hpp  MessageBuilder.cpp  MessageBuilder.hpp  MessageColor.cpp  MessageColor.hpp  MessageContainer.cpp  MessageContainer.hpp  MessageElement.cpp  MessageElement.hpp  MessageFlag.hpp  MessageParseArgs.hpp  MessageSimilarity.cpp  MessageSimilarity.hpp  MessageSink.hpp  MessageThread.cpp  MessageThread.hpp  ScrollbarHighlight.cpp  ScrollbarHighlight.hpp  Selection.hpp  (+44 more)
src/net/: NetRequest.cpp  NetRequest.hpp  NetworkCommon.hpp  NetworkData.cpp  NetworkData.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkRequest.cpp  NetworkRequest.hpp  NetworkRequester.hpp  NetworkResult.cpp  NetworkResult.hpp  NetworkTimer.cpp  NetworkTimer.hpp  NetworkWorker.hpp
src/platform/: GlobalShortcutPrivate.hpp
src/providers/: ChattersApi.cpp  ChattersApi.hpp  Crashpad.cpp  Crashpad.hpp  GitHubReleases.cpp  GitHubReleases.hpp  IvrApi.cpp  IvrApi.hpp  LinkResolver.cpp  LinkResolver.hpp  NetworkConfigurationProvider.cpp  NetworkConfigurationProvider.hpp  RecentMessagesApi.cpp  RecentMessagesApi.hpp
src/singletons/: Badges.cpp  Badges.hpp  CrashHandler.cpp  CrashHandler.hpp  Crashpad.cpp  Crashpad.hpp  EmoteManager.cpp  EmoteManager.hpp  Emotes.cpp  Emotes.hpp  FFZBadges.cpp  FileLogger.cpp  FileLogger.hpp  FontManager.cpp  FontManager.hpp  Fonts.cpp  Fonts.hpp  ImageUploader.cpp  ImageUploader.hpp  IrcManager.cpp  IrcManager.hpp  LoggerToFile.cpp  LoggerToFile.hpp  Logging.cpp  Logging.hpp  LoggingManager.cpp  LoggingManager.hpp  NativeMessaging.cpp  NativeMessaging.hpp  NativeMessagingManager.cpp  NativeMessagingManager.hpp  PathManager.cpp  PathManager.hpp  Paths.cpp  Paths.hpp  ResourceManager.cpp  ResourceManager.hpp  Resources.cpp  Resources.hpp  (+57 more)
tests/: .clang-format  CMakeLists.txt  README.md  docker-compose.yml
(+2695 files in other folders)
